--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
 	"client": {
-		"host": "Please enter your server URL",
-		"port": "Please enter your server port",
+		"host": "CelestialmwZR.aternos.me",
+		"port": "33071",
 		"username": "Please enter the bot's username you want"
 	},
 	
